# snake-hrl-torchrl

./: ._zotero-cli  .dockerignore  .gitignore  =0.3.0  CLAUDE.md  Dockerfile  MMRKHS.ipynb  README.md  docker-compose.yml  pyproject.toml  queue_ppo.sh  record_locomotion.py  requirements.txt  rl-debug.skill
.claude/: gsd-file-manifest.json  settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
Bing et al. (IJCAI 2019)/: __init__.py  configs.py  planar_snake_env.py
Zheng, Li & Hayashibe (2022)/: env.py
aprx_model_elastica/: arch_sweep.py  collect_config.py  collect_data.py  dataset.py  env.py  model.py  sweep.py  train_config.py  train_rl.py  train_surrogate.py  validate.py  validate_data.py
bing2019/: __init__.py  configs_bing2019.py  env_bing2019.py  evaluate_locomotion.py  record_locomotion.py  rewards_bing2019.py  tracks_bing2019.py  train_locomotion.py
choi2025/: __init__.py  configs_choi2025.py  control.py  control_choi2025.py  env_choi2025.py  evaluate_choi2025.py  record.py  record_choi2025.py  rewards_choi2025.py  tasks.py  tasks_choi2025.py  train.py  train_choi2025.py
data/: approach_experiences.npz  coil_rl_init.npz  coil_verification_trajectory.npz  ideal_coil_curvatures.npz
doc/: log.rl-environment-comparison.md
documents/: .latexmkrc  LATEX_AUTO_CLEANUP.md  LATEX_STYLE_PREFERENCES.md  dismech_migration.md  experiments.md  issues.md  logs.md  overview.tex  todo-snake-hrl.md
experiments/: choi2025-full-results.md  choi2025-quick-validation.md  elastica-substep-stability-sweep.md  finetune_001_from_scratch.md  locomotion-elastica-evaluation-session10-best.md  locomotion-elastica-training-session-10.md  locomotion-elastica-training-session-7.md  locomotion-elastica-training-session-8.md  locomotion-elastica-training-session-9.md  mmrkhs-100k-validation-follow-target.md  motion-planning-feasibility.md  otpg-100k-validation-follow-target.md  physics-backend-benchmark.md  ppo-clean-reward-diagnostic.md  ppo-clean-reward-run6.md  ppo-curriculum-learning.md  ppo-debug-diagnostic-session.md  ppo-follow-diagnosis.md  ppo-heading-reward-diagnostic.md  ppo-heading-reward.md  ppo-iteration-timing-breakdown.md  ppo-pbrs-diagnostic.md  ppo-pbrs-only-diagnostic.md  reward-ablation-results.md  reward-design-ablation.md  steepness-and-tuning-ablation.md  substep-loop-optimization-benchmark.md  surrogate-data-coverage-improvements.md  surrogate-parallel-data-collection.md  surrogate-run-6.md
figures/: coupling_pattern.py  rl_training_curves.py  staggered_grid.py  surrogate_results.py
issues/: choi2025-physics-parameter-mismatch.md  dataloader-semaphore-deadlock.md  elastica-amplitude-range-too-small.md  elastica-curvature-not-updated-substeps.md  elastica-damping-too-high.md  elastica-friction-coefficient-tuning.md  elastica-missing-friction-force.md  elastica-rft-python-loop-slow.md  elastica-rod-radius-too-small.md  elastica-wrong-wave-direction.md  env-close-api-compat.md  lr-scheduler-division-by-zero.md  mmrkhs-kl-detached-and-metrics-corruption.md  numba-thread-pool-deadlock-worker-stalls.md  ppo-diagnostic-blind-spot.md  ppo-entropy-collapse.md  ppo-loss-averaging-bug.md  ppo-observation-scaling.md  ppo-reward-snr.md  python-bytecode-cache-stale-code.md  report-substep-count-error.md  sac-500-envs-broken-pipe-crash.md  sac-actor-gradient-explosion.md  sac-follow-target-nan-divergence.md  sac-no-entropy-instability.md  serpenoid-wave-direction-sign-error.md  surrogate-data-loss-on-worker-respawn.md  surrogate-dataset-key-mismatch-crash.md  surrogate-omega-z-poor-prediction.md  surrogate-worker-7-stall-respawn.md  sweep-m1-sigusr1-kill.md  torchrl-v011-batch-structure.md  torchrl-v011-clipppoloss-parameters.md  torchrl-v011-close-signature.md  torchrl-v011-collector-drops-keys.md  torchrl-v011-import-renames.md  torchrl-v011-syncdatacollector-deprecation.md  trainer-metric-averaging-and-kl-detach-bugs.md  velocity-reward-always-negative.md  worker-respawn-investigation-needed.md
jiang2024/: configs_jiang2024.py  evaluate_navigation.py  rewards_jiang2024.py  train_navigation.py
knowledge/: artificial-potential-fields.md  choi2025-four-tasks-pde-system.md  control-and-actuation.md  control-frequency-survey.md  control-methods-comparison.md  cpu-utilization-analysis.md  cross-framework-comparison-protocol.md  dd-pinn-cosserat-rod-availability.md  dismech-contact-pipe-tunnels.md  friction-contact-models.md  genesis-feasibility-analysis.md  genesis-fem-deep-dive.md  genesis-physics-engine.md  grpo-and-hrpo-algorithms.md  knode-cosserat-availability.md  knode-cosserat-hybrid-surrogate-report.md  knode-cosserat-surrogate-idea.md  llm-alignment-algorithms-vs-continuous-control.md  mujoco-body-representations-and-physics.md  neural-ode-pde-approximation-survey.md  neural-surrogate-cosserat-rod.md  neural-surrogate-simulators-for-rl.md  neural-surrogates-cosserat-rod-dynamics.md  non-uniform-data-coverage-supervised-learning.md  ode-pde-formulation-conventions.md  periodic-pattern-learning-surrogate-research.md  physics-framework-comparison.md  physics-informed-reinforcement-learning.md  pinn-clean-pde-system-framework.md  pinn-ddpinn-snake-locomotion-feasibility.md  pipe-locomotion-no-gravity.md  simulator-comparison-soft-robot-rl.md  surrogate-architecture-comparison.md  surrogate-input-representation-research.md  surrogate-mathematical-formulation.md  surrogate-time-encoding-and-elastic-propagation.md  symmetry-analysis-ode-state-simplification.md
licher2025/: configs_licher2025.py  train_licher2025.py
liu2021/: configs_liu2021.py  train_liu2021.py
liu2022/: __init__.py  configs_liu2022.py  env_liu2022.py  train_liu2022.py
liu2023/: configs_liu2023.py  train_liu2023.py
locomotion/: __init__.py  config.py  configs_locomotion.py  env.py  env_locomotion.py  evaluate.py  evaluate_locomotion.py  record_locomotion.py  rewards_locomotion.py  train.py  train_locomotion.py
locomotion_elastica/: config.py  env.py  evaluate.py  record.py  rewards.py  train.py
logs/: choi2025-full-training-launch.md  pinn-probe-pde-suite.md  (+6 more)
(+965 files in other folders)
