[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-hrl"
version = "0.1.0"
description = "Hierarchical Reinforcement Learning for Snake Predation using TorchRL"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Snake HRL Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.6.0",
    "torchrl>=0.7.0",
    "tensordict>=0.7.0",
    "gymnasium>=1.0.0",
    "mujoco>=3.2.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "pyelastica>=0.3.0",
    "wandb>=0.18.0",
    "dismech-python",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]
monitoring = ["psutil>=5.9.0"]
dismech-cpp = [
    "dismech-rods",
]

[tool.uv.sources]
dismech-python = {git = "https://github.com/StructuresComp/dismech-python.git"}
dismech-rods = {git = "https://github.com/StructuresComp/dismech-rods.git"}

[tool.setuptools.packages.find]
where = ["."]
include = [
    "src", "src.*",
    "bing2019*",
    "choi2025*",
    "locomotion*",
    "locomotion_elastica*",
    "jiang2024*",
    "licher2025*",
    "liu2021*",
    "liu2022*",
    "naughton2021*",
    "schaffer2024*",
    "shi2020*",
    "zheng2022*",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
